Setting min-height to fixed footer to make room for text below button and prevent user from having to push button twice on iPhone

--- a/static/less/public/aktiviteter.less
+++ b/static/less/public/aktiviteter.less
@@ -1,6 +1,7 @@
 div.aktivitet-listing {
 
   div.navbar.toggle-filters-results {
+    min-height: 94px;
     padding: 10px 0;
   }
 
